syntax = "proto3";
package analyzer;

service AnalyzerService {
  rpc initAnalyzer (InitRequest) returns (InitResponse);
  rpc analyzeStream (StreamData) returns (DataPoints);
}

message InitRequest {
  string initMessage = 1;
}

message InitResponse {
  string initResponseMessage = 1;
}

message StreamData {

}

message DataPoints {

}
